--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     text-align: center;
-    font-size: 2.8vh;
+    font-size: 2.5vh;
+    margin: 0;
+    padding: 3 vh;
     
 }
 h1{
@@ -11,17 +13,25 @@ h1{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    padding: 2.8 vh;
 }
 .box1{
     background-color: blueviolet;
-    width: 15%;
-    height: 50px;
+    width: 30vh;
+    min-height: 10vh;
     border-radius: 5%;
     margin-right: 0.2%;
     margin-bottom: 0;
     margin-top: 0.1%;
     padding-top: 2.5%;
     text-align: center;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    word-wrap: break-word;
+    /* box-sizing: border-box; */
+    font-size: 3vh;
+   
 }
 button{
     margin-top: 4%;
@@ -30,6 +40,7 @@ button{
     color: white;
     border-radius: 6%;
     border: 0;
+    font-size: 3vh;
 }
 button:hover{
     background-color: red;
@@ -45,4 +56,16 @@ button:hover{
 }
 .border{
     background-color: gold;
+}
+@media (max-width: 480px) {
+    .box1{
+        width: 45%;
+    }
+    body{
+        font-size: 3vh;
+    }
+    button {
+        font-size: 2vh;
+        
+    }
 }
